--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <a id="logo" href="#">
             <img src="images/logo.svg" alt="Treine.me" />
           </a>
-          <div class="list">
-            <div class="item"><a href="#">Home</a></div>
-            <div class="item"><a href="#">Sobre</a></div>
-            <div class="item"><a href="#">Treinar</a></div>
-          </div>
+          <ul>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">Sobre</a></li>
+            <li class="item"><a href="#">Treinar</a></li>
+          </ul>
         </nav>
     
       <main>
